err/pyf.dataflow.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/dateutil'...
Listing './lib/python3.5/site-packages/dateutil/tz'...
Listing './lib/python3.5/site-packages/dateutil/zoneinfo'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyf'...
Listing './lib/python3.5/site-packages/pyf/dataflow'...
Compiling './lib/python3.5/site-packages/pyf/dataflow/components.py'...
***   File "./lib/python3.5/site-packages/pyf/dataflow/components.py", line 15
    except ImportError, AttributeError:
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyf/dataflow/core.py'...
***   File "./lib/python3.5/site-packages/pyf/dataflow/core.py", line 32
    raise ValueError, ("The given generator port %r does not match "
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pyf/splitter'...
Listing './lib/python3.5/site-packages/pyf/transport'...
Compiling './lib/python3.5/site-packages/pyf/transport/packets.py'...
***   File "./lib/python3.5/site-packages/pyf/transport/packets.py", line 188
    raise AttributeError, "'packet' object has no attribute '%s'" % attribute
                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pyf.dataflow-2.0.2.egg-info'...
Listing './lib/python3.5/site-packages/pyf.splitter-3.1.egg-info'...
Listing './lib/python3.5/site-packages/pyf.transport-2.0.1.egg-info'...
Listing './lib/python3.5/site-packages/pyjon'...
Listing './lib/python3.5/site-packages/pyjon/utils'...
Listing './lib/python3.5/site-packages/pyjon.utils-0.7.dist-info'...
Listing './lib/python3.5/site-packages/python_dateutil-2.6.1.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/tests'...
Listing './share'...
Listing './share/python-wheels'...
